# park_up_edge_node

./: main.py  pyproject.toml
adapters/: fast_alpr_recognizer.py  opencv_recognizer.py
adapters/monitoring/: monitoring_analytics.py
adapters/parking_sites/: parking_state_updater.py
adapters/stream/: stream_camera.py
ports/: plate_recognizer.py
ports/monitoring/: monitoring_api.py
ports/parking_sites/: parking_sites_api.py
ports/stream/: stream_api.py
schemas/: edge.py
