[project]
name = "park-up-edge-node"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "easyocr>=1.7.2",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "numpy>=2.3.0",
    "safetensors>=0.5.3",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
